# TurtleBoat

./: .gitignore  README.md  Untitled Diagram.drawio  package.xml  setup.cfg  setup.py  testpublisher.py
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/geographic_msgs/: BoundingBox.h  GeoPath.h  GeoPoint.h  GeoPointStamped.h  GeoPose.h  GeoPoseStamped.h  GeoPoseWithCovariance.h  GeoPoseWithCovarianceStamped.h  GeographicMap.h  GeographicMapChanges.h  GetGeoPathRequest.h  GetGeoPathResponse.h  GetGeographicMapRequest.h  GetGeographicMapResponse.h  GetRoutePlanRequest.h  GetRoutePlanResponse.h  KeyValue.h  MapFeature.h  RouteNetwork.h  RoutePath.h  RouteSegment.h  UpdateGeographicMapRequest.h  UpdateGeographicMapResponse.h  WayPoint.h
devel/include/uuid_msgs/: UniqueID.h
devel/lib/geonav_transform/: geonav_transform_node
devel/lib/nausbot/: main.py  tnmodel1.py
devel/lib/pkgconfig/: geodesy.pc  geographic_msgs.pc  geonav_transform.pc  nausbot.pc  nausbot_sim.pc  unique_id.pc  uuid_msgs.pc
devel/lib/python3/dist-packages/alvinxy/: __init__.py
devel/lib/python3/dist-packages/geodesy/: __init__.py
devel/lib/python3/dist-packages/geographic_msgs/msg/: _BoundingBox.py  _GeoPath.py  _GeoPoint.py  _GeoPointStamped.py  _GeoPose.py  _GeoPoseStamped.py  _GeoPoseWithCovariance.py  _GeoPoseWithCovarianceStamped.py  _GeographicMap.py  _GeographicMapChanges.py  _KeyValue.py  _MapFeature.py  _RouteNetwork.py  _RoutePath.py  _RouteSegment.py  _WayPoint.py  __init__.py
devel/lib/python3/dist-packages/geographic_msgs/srv/: _GetGeoPath.py  _GetRoutePlan.py  (+2 more)
devel/lib/python3/dist-packages/unique_id/: __init__.py
devel/share/geodesy/cmake/: geodesyConfig.cmake
devel/share/geographic_msgs/cmake/: geographic_msgs-msg-extras.cmake  geographic_msgs-msg-paths.cmake  geographic_msgsConfig.cmake
devel/share/geonav_transform/cmake/: geonav_transformConfig.cmake
devel/share/nausbot/cmake/: nausbotConfig.cmake
devel/share/nausbot_sim/cmake/: nausbot_simConfig.cmake
devel/share/roseus/ros/geographic_msgs/: manifest.l
devel/share/roseus/ros/uuid_msgs/: manifest.l
devel/share/unique_id/cmake/: unique_idConfig.cmake
devel/share/uuid_msgs/cmake/: uuid_msgs-msg-extras.cmake  uuid_msgs-msg-paths.cmake  uuid_msgsConfig.cmake
nausbot/: nausbotMain.py
src/nausbot/: CMakeLists.txt  package.xml
src/nausbot/scripts/: main.py  main_old.py  tnmodel1.py  vesselTools.py
src/nausbot/srv/: resetVessel.srv
src/nausbot_sim/: CMakeLists.txt  package.xml
src/nausbot_sim/scripts/: .talker.py.kate-swp  main.py  tnmodel1.py
src/turtleboat/: CMakeLists.txt  package.xml
src/turtleboat/scripts/: main.py
turtleboat/: turtleboatmain.py  utils.py
(+30 files in other folders)
