<?xml version="1.0"?>
<package format="2">
  <name>nausbot</name>
  <version>0.0.1</version>
  <description>Simple vessel simulator on a single ROS node</description>
  <author email="bartboogmans@hotmail.com">Bart Boogmans</author>
  <license>GPLv3</license>
  <url type="website">https://github.com/bartboogmans/Nausbot</url>
  <author email="bartboogmans@hotmail.com">Bart Boogmans</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <export>  </export>
</package>
